# wes-qc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  run_all_steps.sh  wesqc.Snakefile  wesqc.py
0-pre_qc_check/: verifybamid_mergeresults  verifybamid_run
0-resource_preparation/: 0-create_data_folder.py  1-import_1kg.py  2-generate-truthset-ht.py  3-prepare-gnomAD-table.py  3-prepare-gnomad-table.py
1-import_data/: 1-copy_gatk_to_secure_lustre.py  1-import_gatk_vcfs_to_hail.py  2-import_annotations.py  2-import_gatk_vcfs_to_hail.py  2a-test-duplicates.py  3-fam-to-sex-annotation.py  3-validate-gtcheck.py  4-import-1kg.py  4-import_1kg.py  4-mutation-spectra_preqc.py
2-sample_qc/: 1-hard_filters_sex_annotation.py  2-3a-merge-and-prune.py  2-prune_related_samples.py  3-population_pca_prediction.b.py  3-population_pca_prediction.py  4-find_population_outliers.py  4a-find_outliers_pop_and_sequencing_loc.py  5-filter_fail_sample_qc.py  5-sample_qc_non_stratified.py  6-filter_fail_sample_qc.py  sample_qc_non_stratified.py
3-variant_qc/: 0-shrink_variants.py  1-generate_truth_sets.py  1-split_and_family_annotate.py  2-create_rf_ht.py  3-train_rf.py  4-apply_rf.py  5-annotate_ht_after_rf.py  5-annotate_ht_after_rf_no_trios.py  6-rank_and_bin.py  6-rank_and_bin_no_trios.py  6-rank_and_bin_split_CA_non_CA.py  7-plot_rf_output.py  7-plot_rf_output_no_trios.py  7-plot_rf_output_split_CA_non_CA.py  8-select_thresholds.1_100.py  8-select_thresholds.py  9-filter_mt_after_variant_qc.py
4-genotype_qc/: 1-apply_hard_filters.py  1-compare_hard_filter_combinations.py  1a-apply_range_of_hard_filters.chrX.V2.py  1a-apply_range_of_hard_filters.chrX.py  1a-apply_range_of_hard_filters.py  2-apply_range_of_hard_filters.py  2-counts_per_sample.py  3-export_vcfs.py  3a-export_vcfs_range_of_hard_filters.py  3b-export_vcfs_range_of_hard_filters.py  3b-export_vcfs_stingent_filters.py  3b-export_vcfs_stringent_filters.py  4-counts_per_sample.py  5-mutation-spectra_afterqc.py
bam/: verifybamid.sh
check_array_data/: README.md  analyse_gtcheck_output.py  check_wes_vs_wes_gtcheck_output.py  convert_plink_to_vcf  convert_plink_to_vcf.sh  isec_exome_array.sh  lift_array_vcf_to_b38.sh  make_run_gtcheck_worklist.sh  merge_fenland_map.ipynb  parse_gtcheck_output.py  run_gtcheck.py  run_gtcheck_job_array.sh
config/: .inputs.yaml.swp  fenland.yaml  hard-filter-combinations-bib.yaml  hard-filter-combinations-fenland.yaml  hard-filter-combinations-fenland_attempt_2.yaml  hard-filter-combinations-fenland_attempt_3.yaml  hard-filter-combinations-fenland_prec_recall_bins.yaml  hard-filter-combinations-mcs.yaml  hard-filter-combinations.0.yaml  hard-filter-combinations.yaml  input_files.yaml  inputs-alspac.yaml  inputs-bib.yaml  inputs-chrX.yaml  inputs-fenland.yaml  inputs-gz3-publictest.yaml  inputs-gz3-publictest_old.yaml  inputs-mcs.yaml  inputs-mk43-a.yaml  inputs-orig.yaml  inputs.evaluation.yaml  inputs.yaml  inputs_1000G_small.yaml  inputs_old.yaml  inputs_test_small_dataset.yaml  new_config_example.yaml  public-dataset.yaml
docs/: hail-on-spark.md  (+8 more)
(+248 files in other folders)
