[project]
name = "wxs-qc"
version = "0.2.0"
description = "Quality control pipeline for human exome/genome cohorts"
readme = "README.md"
requires-python = ">=3.12"

## It's possible to use the project with older python versions.
# To do this, check and restrict the onnxruntime version
# For Python 3.9 add the following:
# python_version = ">=3.9"
# dependencies = [ "onnxruntime<1.20.0" ]

classifiers = [
    "Development Status :: Beta",
    "License :: OSI Approved :: BSD-3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    "hail==0.2.133",
    "gnomad>=0.8.1",
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "jupyterlab>=3.5.3", # For cluster run
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-it>=0.1.5",
    "snakeviz>=2.2.2",
    "mypy>=1.16",
    "types-pyyaml>=6.0",
    "pandas-stubs>=2.2.3",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "hail"
ignore_missing_imports = true
